<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageIV"
                android:layout_width="100dp"
                android:layout_height="100dp"

                android:src="@drawable/icon_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="4dp">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_text"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/checkNameItemTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="@string/name_text_tv"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:gravity="end"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_text"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/checkPriceItemTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="@string/price_text_tv"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:gravity="end"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:gravity="end"
                        android:text="@string/rub_text"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </TableRow>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>