<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="4dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/checkNameItemTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_text"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/checkPriceItemTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="@string/price_text_tv"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:gravity="end"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/rub_text"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:gravity="end"/>


                </TableRow>

            </LinearLayout>

</LinearLayout>